# up_frontcam_ref_app

./: CMakeLists.txt  package.xml
application/src/: front_cam_main.c
application/src/cdnn/include/: cdnn_main.h
application/src/cdnn/src/: cdnn_main.c
application/src/customize/: frontcam_customize.c
application/src/customize/include/: customize.h
application/src/include/: common.h
application/src/opencv/: draw_detection.cpp
include/: up_frontcam_ref_app_node.hpp
src/: up_frontcam_ref_app_node.cpp
test_data/config/: frontcam_customize.config
