<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>up_frontcam_ref_app</name>
  <version>0.3.0</version>
  <description>U Power CES FRONT CAM DEMO</description>
  <maintainer email="lawrence.xu@upower.com">Lawrence Xu (Ziheng)</maintainer>
  <license>U POWER ROBOTICS USA INC. SOFTWARE LICENSE</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>  

  <depend>libopencv-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
